modificacion del index he borrado una linea y he añadido dos mas

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <body>
 <h1>Ivan Avila Piera</h1>
 <ul>
-<li>Paises que me gustaria visitar: Italia,Tailandia,Australia</li>
+
 <li>Platos preferidos:Los canelones de la suegra,pollo al curry</li>
 <li>Aficiones:Jugar a la play,alimentar a los gatos de la calle</li>
+<li>Seguidor del FCBarcelona</li>
+<li>Antimadridista</li>
 </ul>
 </body>
 </html>
